ingress/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: giropops-senhas
  labels: 
    app: giropops-senhas
spec:
  selector:
    app: giropops-senhas
  ports:
    - protocol: TCP
      port: 5000
      nodePort: 32500
      name: tcp-app
  type: NodePort
